--- a/closure.cabal
+++ b/closure.cabal
@@ -17,7 +17,10 @@ extra-source-files:  CHANGELOG.md
 
 library
   exposed-modules:     Closure
+                     , Machine
   build-depends:       base ^>=4.12.0.0
                      , megaparsec
+                     , mtl
+                     , vector
   hs-source-dirs:      src
   default-language:    Haskell2010
