--- a/closure.cabal
+++ b/closure.cabal
@@ -22,5 +22,6 @@ library
                      , megaparsec
                      , mtl
                      , vector
+  ghc-options:         -Wall -Werror
   hs-source-dirs:      src
   default-language:    Haskell2010
