--- a/closure.cabal
+++ b/closure.cabal
@@ -16,7 +16,7 @@ category:            Language
 extra-source-files:  CHANGELOG.md
 
 library
-  exposed-modules:     Closure
+  exposed-modules:     Closure, ANF, Machine
   build-depends:       base ^>=4.12.0.0
                      , megaparsec
                      , mtl
